  - Fixed defect #1531 java.util.NoSuchElementException on most movies
  - Fixed defect #1545 Failed creating thumbnail with Set or Series
  - Fixed defect #1547 KinoPoisk's plugin is malfunction
  - Fixed defect #1549 All movies now seen as new even when re-run
  - Enhancement  #1550 KinoPoisk's plugin can use Top250 rating of movie

MovieJukebox 2.0
----------------
  - Enhancement   #118 Exclude strings for files/folders to support regex
  - Enhancement   #357 Use XBMC episodedetails NFO to override TV episode information
  - Enhancement   #364 Use directory name to scan for movie title
  - Enhancement   #409 Enhance language/flags functionality
  - Enhancement  #1034 Multiple Language detect
  - Enhancement  #1042 TVRage.com scraper (Beta Release Only)
  - Enhancement  #1253 Allow custom XSL files to be loaded for sets and other indexes
  - Enhancement  #1279 Delete temp folders on YAMJ exit
  - Enhancement  #1294 Flag support for Filipino (Tagalog) language
  - Fixed defect #1344 OpenSubtitles plugin error
  - Enhancement  #1352 More information during startup scanning
  - Fixed defect #1353 Duration isn't correctly read from Allocine
  - Enhancement  #1355 Support for multiple NFO file extensions
  - Enhancement  #1356 Option to accept all found NFO files in a directory
  - Enhancement  #1362 Improve search accuracy for FilmAffinity plugin
  - Fixed defect #1363 Subtitles not being downloaded for new TV Show episodes
  - Enhancement  #1365 Allocine Plugin: Fallback to release date if production date isn't available
  - Fixed defect #1367 PART title processing broke
  - Fixed defect #1373 Russian file names support
  - Fixed defect #1376 Null Pointer Exception in MovieDirectoryScanner
  - Enhancement  #1378 Kinopoisk plugin search enhancement
  - Fixed defect #1386 Keep previously scanned movies parameter causes playLink error
  - Enhancement  #1389 Allocine now gets certifications
  - Fixed defect #1394 TV Series Episode names not picked up from filename