@@ -22,6 +22,7 @@ MovieJukebox 2.1 BETA
   - Fixed defect #1547 KinoPoisk's plugin is malfunction
   - Fixed defect #1549 All movies now seen as new even when re-run
   - Enhancement  #1550 KinoPoisk's plugin can use Top250 rating of movie
+  - Fixed defect #1552 KinoPoisk's plugin has problems when filename contains dash (-)
 
 MovieJukebox 2.0
 ----------------
